--- a/.luarc.json
+++ b/.luarc.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
   "workspace.library": [
-    "./"
+    "./",
+    "/usr/local/share/lua/5.1/"
   ]
 }
