--- a/.luarc.json
+++ b/.luarc.json
@@ -1,7 +1,8 @@
 {
   "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
+  "runtime.version": "LuaJIT",
   "workspace.library": [
-    "./",
-    "/usr/local/share/lua/5.1/"
+    "./deps/",
+    "$HOME/.luarocks/share/lua/5.1/"
   ]
 }
